# backend/storage/api-docs/api-docs.json
@@ -295,7 +295,8 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "translations"
+                                    "translations",
+                                    "media_ids"
                                 ],
                                 "properties": {
                                     "translations": {
@@ -327,6 +328,19 @@
                                             },
                                             "type": "object"
                                         }
+                                    },
+                                    "media_ids": {
+                                        "description": "An array of existing media IDs to associate with this blog post.",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "example": [
+                                            1,
+                                            2,
+                                            3
+                                        ]
                                     }
                                 },
                                 "type": "object"
@@ -383,7 +397,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "required": [
                                     "order",
@@ -393,10 +407,6 @@
                                     "order": {
                                         "type": "integer",
                                         "example": 1
-                                    },
-                                    "image": {
-                                        "type": "string",
-                                        "format": "binary"
                                     },
                                     "translations": {
                                         "type": "array",
@@ -423,6 +433,19 @@
                                             },
                                             "type": "object"
                                         }
+                                    },
+                                    "media_ids": {
+                                        "description": "An array of existing media IDs to associate with this blog post.",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "example": [
+                                            1,
+                                            2,
+                                            3
+                                        ]
                                     }
                                 },
                                 "type": "object"
